--- a/_includes/index/objects.html
+++ b/_includes/index/objects.html
@@ -11,6 +11,9 @@
       {% case t %}
       {% when 'image' %} 
       <a class="text-dark" href="{{ 'image' | prepend: '/browse.html#' | relative_url }}">Image{% if count > 1 %}s{% endif %} <svg class="bi icon-sprite text-body" fill="currentColor" aria-hidden="true"><use xlink:href="{{ '/assets/lib/cb-icons.svg' | relative_url }}#icon-image"/></svg></a><br>
+      <a class="text-dark ml-4" href="{{ 'vertical-photo' | strip | url_param_escape | prepend: '/browse.html#' | relative_url }}">1481 Vertical Photographs <i class="fas fa-plane"></i></a><br>
+      <a class="text-dark ml-4" href="{{ 'oblique-photo' | strip | url_param_escape | prepend: '/browse.html#' | relative_url }}">527 Oblique Photographs <i class="fas fa-plane-departure"></i></a><br>
+      <a class="text-dark ml-4" href="{{ 'index-guide' | strip | url_param_escape | prepend: '/browse.html#' | relative_url }}">13 Index Guides <i class="fas fa-helicopter"></i></a><br>
       {% when 'audio' %}
       <a class="text-dark" href="{{ 'audio' | prepend: '/browse.html#' | relative_url }}">Audio File{% if count > 1 %}s{% endif %} <svg class="bi icon-sprite text-body" fill="currentColor" aria-hidden="true"><use xlink:href="{{ '/assets/lib/cb-icons.svg' | relative_url }}#icon-audio"/></svg></a><br>
       {% when 'video' %}
