--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -17,7 +17,7 @@ layout: page
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
+    {% include index/featured-terms.html featured="Washington;Idaho County;Nez Perce County; Lewiston; Kootenai County; Whitman County; Oregon; Shoshone County; Montana;" title="Locations" btn-color="outline-payette-blue" %}
     
     {% include index/objects.html %}
 
