--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,28 +4,26 @@ layout: page
 ---
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
 <div class="row">
-
   <div class="col-md-8">
-
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" %}
-    
   </div>
-  <div class="col-md-4">  
-
+  <div class="col-md-4">
     {% include index/time.html %}
-
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
-
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
-    
+  </div>
+  <div class="col-md-4">
+    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="info" featured="boats; lakes; mountains; docks; rivers; cabins (houses)" %}
+  </div>
+  <div class="col-md-4">
+    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" featured="Priest Lake; Upper Priest Lake; Priest River; Coolin; Idaho" %}
+  </div>
+  <div class="col-md-4">
     {% include index/objects.html %}
-
+  </div>
+  <div class="col-md-12 mb-3">
+    {% include feature/timelinejs.html %}
   </div>
   <div class="col-md-12">
-
     {% include index/data-download.html %}
-
   </div>
 
 </div>
