--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -17,7 +17,7 @@ layout: page
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
+    {% include index/featured-terms.html featured="Salmon River; Frank Church-River of No Return Wilderness; Chamberlain Basin" title="Locations" btn-color="outline-payette-blue" %}
     
     {% include index/objects.html %}
 
