--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -24,7 +24,7 @@ custom-foot: js/timeline-js.html
 {%- if navYears -%}
 <div class="dropdown float-end" id="year-nav">
     <button class="btn btn-primary dropdown-toggle" type="button" id="yearButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Year
+        Depth
     </button>
     <div class="dropdown-menu" aria-labelledby="yearButton">
         {% for y in navYears %}
@@ -35,14 +35,12 @@ custom-foot: js/timeline-js.html
 
 {{ content }}
 
-<h3><a href="#y{{ uniqueYears | first }}">{{ uniqueYears | first }}</a> to <a href="#y{{ uniqueYears | last }}">{{ uniqueYears | last }}</a></h3>
+<h3><a href="#y{{ navYears | first }}">{{ navYears | first }}</a> to <a href="#y{{ navYears | last }}">{{ navYears | last }}</a></h3>
 
-<table id="timeline" class="table table-striped">
+<table id="timeline" class="table">
     {% for year in uniqueYears %}
-    <tr id="y{{ year }}">
-        <th>
-            <h3>{{ year }}</h3>
-        </th>
+    <tr id="{{ year }}" style="background-color:#{% cycle 'CFCFCF', 'B8B8B8', 'A1A1A1', '8A8A8A', '737373', '5C5C5C', '454545', '2E2E2E', '171717', '000' %}">
+        <th><th><h3 class="text-white" >{{ year }}ft</h3></th>
         <td>
             <div class="row">
                 {%- assign inYear = items | where_exp: 'item', 'item[field] contains year' -%}
