--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -11,7 +11,7 @@ custom-foot: js/timeline-js.html
 {% endif %}
 {%- assign items = items | where_exp: 'item','item[field]' -%}
 {%- assign raw-dates = items | map: field | compact | uniq -%}
-{%- capture clean-years -%}{% for date in raw-dates %}{% if date contains "-" %}{{ date | strip | split: "-" | first }}{% elsif date contains "/" %}{{ date | strip | split: "/" | last }}{% else %}{{ date | strip }}{% endif %}{% unless forloop.last %};{% endunless %}{%- endfor -%}{%- endcapture -%}
+{%- capture clean-years -%}{% for date in raw-dates %}{% if date.size == 3 %}{{ date | strip | prepend: "0" }}{% else %}{{ date | strip }}{% endif %}{% unless forloop.last %};{% endunless %}{%- endfor -%}{%- endcapture -%}
 {%- assign uniqueYears = clean-years | remove: " " | replace: ";;",";" | split: ";" | uniq | sort -%}
 {%- if site.data.theme.year-navigation -%}
 {%- assign navYears = site.data.theme.year-navigation | split: ";" -%}
@@ -35,15 +35,16 @@ custom-foot: js/timeline-js.html
 
 {{ content }}
 
-<h3><a href="#y{{ navYears | first }}">{{ navYears | first }}</a> to <a href="#y{{ navYears | last }}">{{ navYears | last }}</a></h3>
+<h3><a href="#y{{ navYears | first }}">{{ navYears | first }}ft</a> to <a href="#y{{ navYears | last }}">{{ navYears | last }}ft</a></h3>
 
 <table id="timeline" class="table">
     {% for year in uniqueYears %}
-    <tr id="{{ year }}" style="background-color:#{% cycle 'CFCFCF', 'B8B8B8', 'A1A1A1', '8A8A8A', '737373', '5C5C5C', '454545', '2E2E2E', '171717', '000' %}">
-        <th><th><h3 class="text-white" >{{ year }}ft</h3></th>
-        <td>
+    {% capture background %}background-color:#{% cycle 'CFCFCF', 'B8B8B8', 'A1A1A1', '8A8A8A', '737373', '5C5C5C', '454545', '2E2E2E', '171717', '000' %}{% endcapture %} 
+    <tr id="{{ year }}">
+        <th style="{{ background }}"><h3 class="text-white" >{{ year }}ft</h3></th>
+        <td style="{{ background }}">
             <div class="row">
-                {%- assign inYear = items | where_exp: 'item', 'item[field] contains year' -%}
+                {%- assign inYear = items | where_exp: 'item', 'item[field] == year' -%}
                 {% for item in inYear %}
                 <div class="col-lg-4 col-md-6">
                     <a href="{% if item.parentid == nil %}{{ '/items/' | append: item.objectid | append: '.html' | relative_url }}{% elsif item.parentid %}{{ '/items/' | append: item.parentid | append: '.html' | relative_url }}#{{item.objectid }}{% endif %}" >
