--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -4,6 +4,7 @@
 <script src="{{ '/js/lazysizes.min.js' | prepend: site.digital-assets }}" async></script>
 {% if layout.gallery == true or page.gallery == true %}<script src="{{ '/js/spotlight.bundle.js' | prepend: site.digital-assets }}" defer></script>{% endif %}
 {% if page.custom-foot or layout.custom-foot %}
+{% if page.title contains "Extant" %}{% include js/mapextant-js.html %}{% else %}{% include js/map-js.html %}{% endif %}
 {%- assign page_feet = page.custom-foot | split: ";" -%}
 {%- assign layout_feet = layout.custom-foot | split: ";" -%}
 {%- assign feet = page_feet | concat: layout_feet -%}
