--- a/_includes/js/mapextant-js.html
+++ b/_includes/js/mapextant-js.html
@@ -73,7 +73,7 @@
         {% if site.data.theme.mediatypes == "youtube" %}
         var thumbSrc = 'https://img.youtube.com/vi/' + feature.properties.youtube + '/0.jpg';
         {%else%}
-        var thumbSrc = 'http://objects.lib.uidaho.edu/ccidaho/thumbs/' + feature.properties.filename;
+        var thumbSrc = 'http://objects.lib.uidaho.edu/cccidaho/thumbs/' + feature.properties.filename;
         {%endif%}
         if (feature.properties.filename != null){
         var popupTemplate = '<h4><a class="text-dark" href="' + itemHref + '">' +
