fix structures table

--- a/_layouts/table.html
+++ b/_layouts/table.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+custom-foot: js/table-extant-js.html
 ---
 {% assign fields = site.data.config-table-extant | map: 'display_name' %}
 
