migrate home pg

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,24 +8,17 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" %}
+
+    {% include index/carousel.html %}
+
+    {% include index/objects.html %}
     
   </div>
   <div class="col-md-4">  
 
-    {% include index/time.html %}
-
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
-
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
-    
-    {% include index/objects.html %}
+  {% include index/featured-items.html %}
 
   </div>
   <div class="col-md-12">
-
-    {% include index/data-download.html %}
-
-  </div>
 
 </div>
