--- a/assets/css/cb.scss
+++ b/assets/css/cb.scss
@@ -5,13 +5,32 @@
 ---
 @charset "utf-8";
 
-/* base variables pulled from theme.yml */
-$base-font-family: {{ site.data.theme.base-font-family | default: "'Public Sans', sans-serif" }};
-$base-font-size: {{ site.data.theme.base-font-size | default: "1.1em" }};
-$text-color: {{ site.data.theme.text-color | default: "#111" }};
-$link-color: {{ site.data.theme.link-color | default: "#00AEC7" }};
+// base variables
+$base-font-family: {{ site.data.theme.base-font-family | default: '""' }};
+$base-font-size: {{ site.data.theme.base-font-size | default: '""' }};
+$text-color: {{ site.data.theme.text-color | default: '""' }};
+$link-color: {{ site.data.theme.link-color | default: '""' }};
 
-/* theme colors pulled from config-theme-colors */
+// Width of the content area
+$content-width:    1800px;
+$on-palm:          576px;
+$on-laptop:        768px;
+$on-desktop:       992px;
+$on-jumbo:        1200px;
+// Use media queries like this:
+// @include media-query($on-palm) {
+//     .wrapper {
+//         padding-right: $spacing-unit / 2;
+//         padding-left: $spacing-unit / 2;
+//     }
+// }
+@mixin media-query($device) {
+    @media screen and (min-width: $device) {
+        @content;
+    }
+}
+
+/* buttons to theme */
 {% assign btns = site.data.config-theme-colors | where_exp: "item","item.color != nil" %}
 {% if btns != empty %}
 {% for btn in btns %}
@@ -30,4 +49,4 @@ $theme-colors: map-merge(
 @import "theme-colors", "theme-utilities";
 {% endif %}
 
-@import "base", "pages", "custom";
+@import "base", "pages", "tufte", "print", "custom";
