--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,20 +4,22 @@ layout: page
 ---
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
 <div class="row">
+  <div class="col-md-12 mb-4">
 
-  <div class="col-md-8">
-
-    {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" %}
+    {% include feature/timelinejs.html %}
     
   </div>
   <div class="col-md-4">  
 
     {% include index/time.html %}
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
+  </div>
+  <div class="col-md-4">  
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
+    {% include index/featured-terms.html featured="deaths; hospitals; quarantine; Student Army Training Corps (SATC); patients" title="Top Subjects" btn-color="info" %}
+
+  </div>
+  <div class="col-md-4">  
     
     {% include index/objects.html %}
 
