--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -17,7 +17,7 @@ layout: page
       </div>
     </div>
 
-    {% include index/carousel.html title="Preview" %}
+    {% include index/carousel.html title="Preview" btn-text="View Bio" %}
     
   </div>
   <div class="col-md-4">
