--- a/_layouts/item/iwi.html
+++ b/_layouts/item/iwi.html
@@ -4,11 +4,11 @@ item-meta: true
 ---
 <div class="container py-3">
 
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li class="breadcrumb-item"><a href="{{ '/browse.html' | relative_url }}">Browse</a></li>
-        <li class="breadcrumb-item active">{{ page.title | truncatewords: 10 }}</li>
-    </ul>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a class="text-dark" href="{{ '/' | relative_url }}">Home</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="{{ '/browse.html' | relative_url }}">Bios</a></li>
+        <li class="breadcrumb-item active text-dark" aria-current="page">{{ page.title | truncatewords: 10 }}</li>
+    </ol>
 
     <h1>{{ page.title }}</h1>
 
