--- a/_includes/index/content-alert.html
+++ b/_includes/index/content-alert.html
@@ -1,10 +1,10 @@
 <div class="alert alert-warning feature-alert alert-dismissible fade show mb-0 rounded-0 text-center" role="alert">
 
     <div class="h5"><strong>Please note:</strong> Materials in this collection may contain images, language, or other content that may be offensive or disturbing.</div>
-    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#contentWarningModal">More Information</button>
+    <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#contentWarningModal">More Information</button>
 
 
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 
@@ -15,7 +15,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Offensive Content Notice</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
