--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -3,14 +3,14 @@
 layout: page
 custom-foot: js/timeline-js.html
 ---
-{%- assign field = site.data.theme.timeline-field | default: "date" -%}
+{%- assign field = site.data.theme.timeline-field | default: "start_date" -%}
 {% if site.data.theme.timeline-child-objects == true %}
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
 {% else %}
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid and item.parentid == nil' -%}
 {% endif %}
 {%- assign items = items | where_exp: 'item','item[field]' -%}
-{%- assign raw-dates = items | map: field | compact | uniq -%}
+{%- assign raw-dates = items | map: 'start_date' | compact | uniq -%}
 {%- capture clean-years -%}{% for date in raw-dates %}{% if date contains "-" %}{{ date | strip | split: "-" | first }}{% elsif date contains "/" %}{{ date | strip | split: "/" | last }}{% else %}{{ date | strip }}{% endif %}{% unless forloop.last %};{% endunless %}{%- endfor -%}{%- endcapture -%}
 {%- assign uniqueYears = clean-years | remove: " " | replace: ";;",";" | split: ";" | uniq | sort -%}
 {%- if site.data.theme.year-navigation -%}
@@ -46,7 +46,7 @@ custom-foot: js/timeline-js.html
             </th>
             <td>
                 <div class="row">
-                    {%- assign inYear = items | where_exp: 'item', 'item[field] contains year' -%}
+                    {%- assign inYear = items | where_exp: 'item', 'item.start_date contains year' -%}
                     {% for item in inYear %}
                     <div class="col-lg-4 col-md-6">
                         <a href="{% if item.parentid == nil %}{{ '/items/' | append: item.objectid | append: '.html' | relative_url }}{% elsif item.parentid %}{{ '/items/' | append: item.parentid | append: '.html' | relative_url }}#{{item.objectid }}{% endif %}" >
