--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,21 +4,33 @@ layout: page
 ---
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
 <div class="row">
+  <div class="col-md-12 h4 mb-4 text-center">
+    <strong>Search by Document Type:</strong>
+    <a class="btn btn-outline-payette-blue ml-2 mr-2" type="button" href="{{ 'subject files' | escape | prepend: '/browse.html#' | relative_url }}">Subject Files</a>
+    <a class="btn btn-outline-payette-blue" type="button" href="{{ 'family history files' | escape | prepend: '/browse.html#' | relative_url }}">Family History Files</a>
+  </div>
 
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" %}
     
   </div>
   <div class="col-md-4">  
 
+    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="info" featured=site.data.theme.featured-subjects max=site.data.theme.featured-subjects-max %}
+
+  </div>
+  <div class="col-md-4">
     {% include index/time.html %}
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
+  </div>
+  <div class="col-md-4">
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
-    
+    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" featured=site.data.theme.featured-locations max=site.data.theme.featured-locations-max %}
+
+  </div>
+  <div class="col-md-4">
+
     {% include index/objects.html %}
 
   </div>
