--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -2,6 +2,7 @@
   <div class="card-body">
     <h2 class="card-title h5">Description</h2>
     <p class="card-text">{{ site.description }}</p>
-    <a class="btn btn-primary" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
+    <a class="btn btn-primary" href="{{ '/theodore.html' | relative_url }}" role="button">Learn more about Theodore's visit &raquo;</a>
+    <a class="btn btn-primary" href="{{ '/eleanor.html' | relative_url }}" role="button">Learn more about Eleanor's visit &raquo;</a>
   </div>
 </div>
