--- a/_layouts/item/pdf.html
+++ b/_layouts/item/pdf.html
@@ -12,6 +12,8 @@ layout: item/item-page-base
 
         <div class="mt-2">
 
+            {% include feature/alert.html text='Please note: PDF Download is limited to computers inside McCall Public Library only!' color='warning' align='center' %}
+
             {% include item/download-buttons.html %}
 
         </div>
