add alert with mc call contact

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,20 +4,25 @@ layout: page
 ---
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
 <div class="row">
-  <div class="col-md-12 h4 mb-4 text-center">
-    <strong>Search by Document Type:</strong>
-    <a class="btn btn-outline-payette-blue ml-2 mr-2" type="button" href="{{ 'subject files' | escape | prepend: '/browse.html#' | relative_url }}">Subject Files</a>
-    <a class="btn btn-outline-payette-blue" type="button" href="{{ 'family history files' | escape | prepend: '/browse.html#' | relative_url }}">Family History Files</a>
+  <div class="col-md-12">
+    <div class="h4 mb-4 text-center">
+      <strong>Search by Document Type:</strong>
+      <a class="btn btn-outline-payette-blue ml-2 mr-2" type="button" href="{{ 'subject files' | escape | prepend: '/browse.html#' | relative_url }}">Subject Files</a>
+      <a class="btn btn-outline-payette-blue" type="button" href="{{ 'family history files' | escape | prepend: '/browse.html#' | relative_url }}">Family History Files</a>
+    </div>
+
+    {% include feature/alert.html text="**Please note:** The items featured in this collection are held by the McCall Public Library. The materials are *only available for download at computers inside the McCall Public Library*. Please contact <library@mccall.id.us>{:.alert-link} with questions." color="warning" %}
   </div>
 
   <div class="col-md-8">
 
     {% include index/description.html %}
     
+    
   </div>
   <div class="col-md-4">  
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="info" featured=site.data.theme.featured-subjects max=site.data.theme.featured-subjects-max %}
+    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" max=10 %}
 
   </div>
   <div class="col-md-4">
@@ -26,7 +31,7 @@ layout: page
   </div>
   <div class="col-md-4">
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" featured=site.data.theme.featured-locations max=site.data.theme.featured-locations-max %}
+    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" max=8 %}
 
   </div>
   <div class="col-md-4">
