--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,18 +7,26 @@ layout: page
 
   <div class="col-md-8">
 
-    {% include index/description.html %}
+    <div class="card mb-3">
+      <div class="card-body">
+        <h2 class="card-title h5">Description</h2>
+        <p class="card-text">This exhibit was a collaboration between the Latah Preservation Commission (LPC) and the University of Idaho Library to illustrate the Latah County Historic Touring Map.</p>
+        <p class="card-text">LPC's <a href="{{ '/items/latahsites0093.html' | relative_url }}">printed map</a>, while handy to keep in the car, cannot include high resolution photos of each historic site. This digital version of the touring map includes contemporary photos of each location as well as historic images drawn from Special Collections and Archives to illustrate the ongoing significance of the highlighted structures and landmarks.</p>
+        <p>Learn more about the project and the history of Latah County on the <a href="{{ '/about.html' | relative_url }}">About page</a> or visit the <a href="{{ '/map.html' | relative_url }}">Map page</a> to start exploring!</p>
+        <a class="btn btn-lg btn-primary" href="{{ '/map.html' | relative_url }}" role="button">Explore the Map &raquo;</a>
+      </div>
+    </div>
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
   <div class="col-md-4">  
 
+    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" max=25 %}
+
+    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" max=10 %}
+
     {% include index/time.html %}
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
-
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
-    
     {% include index/objects.html %}
 
   </div>
