update item layouts

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -11,7 +11,7 @@ layout: page
       <a class="btn btn-outline-payette-blue" type="button" href="{{ 'family history files' | escape | prepend: '/browse.html#' | relative_url }}">Family History Files</a>
     </div>
 
-    {% include feature/alert.html text="**Please note:** The items featured in this collection are held by the McCall Public Library. The materials are *only available for download at computers inside the McCall Public Library*. Please contact <library@mccall.id.us>{:.alert-link} with questions." color="warning" %}
+    {% include feature/alert.html text="**Please note:** The items featured in this collection are held by the McCall Public Library. The materials are *only available for download at computers inside the McCall Public Library*. Please contact <library@mccall.id.us>{:.alert-link} with questions." color="info" %}
   </div>
 
   <div class="col-md-8">
