--- a/_layouts/item/pdf.html
+++ b/_layouts/item/pdf.html
@@ -1,4 +1,5 @@
 ---
+# customized!
 # basic layout for PDF documents
 # Displays image_small if available, with fall back to image_thumb, or a pdf icon.
 layout: item/item-page-base
