--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,7 +9,7 @@ layout: page
 
     {% include index/description.html %}
 
-    {% include index/carousel.html %}
+    {% include index/carousel.html btn-text="View Video" filter-field="display_template" filter-value="video" %}
 
     {% include index/objects.html %}
     
