content alert color update

--- a/_includes/index/content-alert.html
+++ b/_includes/index/content-alert.html
@@ -1,4 +1,4 @@
-<div class="alert alert-warning alert-dismissible fade show mb-0 rounded-0 text-center" role="alert">
+<div class="alert alert-danger alert-dismissible fade show mb-0 rounded-0 text-center" role="alert">
     <div class="h5"><strong>Please note:</strong> Materials in this collection may contain images, language, or other content that may be offensive or disturbing.</div>
     <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#contentWarningModal">More Information</button>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
