--- a/_includes/item/child/compound-item-modal-gallery.html
+++ b/_includes/item/child/compound-item-modal-gallery.html
@@ -16,9 +16,9 @@
                 
                     {% if child.title %}<div class="small text-dark mb-2">{{ child.title | truncatewords: 4 }}</div>{% endif %}
                     
-                    <div class="mb-2" style="min-height: 500px;">
+                    <div class="mb-2">
                         {% if child.image_thumb or child.image_small %}
-                        <img class="img-thumbnail compound-thumb" style="min-height: 500px; width: auto; object-fit: contain;" src="{{ child.image_small | relative_url }}" alt="{{ child.image_alt_text | default: child.description | default: child.title | escape }}">
+                        <img class="img-thumbnail compound-thumb" src="{{ child.image_thumb | default: child.image_small | relative_url }}" alt="{{ child.image_alt_text | default: child.description | default: child.title | escape }}">
                         {% else %}
                         <svg class="bi text-body compound-thumb" fill="currentColor" aria-hidden="true">
                             {%- assign icon_template = child.display_template | default: item.format -%}
