--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -31,20 +31,8 @@
                 </li>
                 {% endif %}
                 {%- endfor -%}
-                <li class="nav-item dropdown">
-                    {% assign events = site.data[site.metadata] | where: 'display_template', 'event' %}
-                    {%- assign childStubs = navChildren | map: 'stub' -%}
-                    <a class="nav-link  dropdown-toggle{% if childStubs contains page.url %} active{% endif %}" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Events</a>
-                    <div class="dropdown-menu dropdown-menu-lg-end">
-                        {% for e in events %}
-                        <a class="dropdown-item {% if page.url contains e.objectid %}active{% endif %}" href="{{ e.objectid | prepend: '/events/' | append: '.html' | relative_url }}">{% if e.presenter %}
-                                {% assign presenters = e.presenter | split: ';' %}
-                                {{ presenters[0] }}{% if presenters.size > 1 %} et al{% endif %}
-                            {% endif %} - {{ e.title | truncatewords: 7 }}
-                            
-                        </a>
-                        {% endfor %}
-                    </div>
+                <li class="nav-item">
+                    <button type="button" class="nav-link btn btn-link" data-bs-toggle="modal" data-bs-target="#eventsModal" role="button">Events</button>
                 </li>
             </ul>
             
@@ -53,3 +41,61 @@
         </div>
     </div>
 </nav>
+
+<!-- Events Modal -->
+<div class="modal fade" id="eventsModal" tabindex="-1" role="dialog" aria-labelledby="eventsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title" id="eventsModalLabel">Events</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 style="margin-top:4px; font-size:27px;">Events</h2>
+                        </div>
+                        <div class="card-body">
+                            <h3>Colloquium Talks</h3>
+                            <a href="{{ '/events/adler.html' | relative_url }}">David Adler</a><br/>
+                            <a href="{{ '/events/aiken.html' | relative_url }}">Katherine Aiken</a><br/>
+                            <a href="{{ '/events/burnett.html' | relative_url }}">Donald Burnett</a><br/>
+                            <a href="{{ '/events/chaney.html' | relative_url }}">Nancy Chaney</a><br/>
+                            <a href="{{ '/events/deyasi.html' | relative_url }}">Marco Deyasi</a><br/>
+                            <a href="{{ '/events/drown.html' | relative_url }}">Stephen Drown</a><br/>
+                            <a href="{{ '/events/edwards.html' | relative_url }}">Dan Edwards</a><br/>
+                            <a href="{{ '/events/eigenbrode.html' | relative_url }}">Sanford Eigenbrode</a><br/>
+                            <a href="{{ '/events/foster.html' | relative_url }}">James Foster</a><br/>
+                            <a href="{{ '/events/frey.html' | relative_url }}">Rodney Frey (Keynote)</a><br/>
+                            <a href="{{ '/events/gasser.html' | relative_url }}">Heather Gasser</a><br/>
+                            <a href="{{ '/events/johnson.html' | relative_url }}">Janis Johnson</a><br/>
+                            <a href="{{ '/events/machlis_keim-campbell.html' | relative_url }}">Sally Graves Machlis & Delphine Keim-Campbell</a><br/>
+                            <a href="{{ '/events/mihelich.html' | relative_url }}">John Mihelich</a><br/>
+                            <a href="{{ '/events/orourke.html' | relative_url }}">Michael O'Rourke</a><br/>
+                            <a href="{{ '/events/peterson.html' | relative_url }}">Marty Peterson</a><br/>
+                            <a href="{{ '/events/reese.html' | relative_url }}">Garth Reese</a><br/>
+                            <a href="{{ '/events/schrand.html' | relative_url }}">Brandon Schrand</a><br/>
+                            <a href="{{ '/events/smith.html' | relative_url }}">Bill Smith</a><br/>
+                            <a href="{{ '/events/suarez.html' | relative_url }}">Carmen Suarez</a><br/>
+                            <a href="{{ '/events/trahant.html' | relative_url }}">Mark Trahant</a><br/>
+                            <a href="{{ '/events/voxman.html' | relative_url }}">Bill Voxman</a><br/>
+                            
+                            <h3 style="margin-top:20px;">Performances</h3>
+                            <a href="{{ '/events/dora.html' | relative_url }}">Adoration of Dora</a><br/>
+                            <a href="{{ '/events/bilderback.html' | relative_url }}">Barry Bilderback (Ghanaian Music)</a><br/>
+                            <a href="{{ '/events/bukvich.html' | relative_url }}">Dan Bukvich and Jazz Choir</a><br/>
+                            <!-- <a href="/events/onefoot.html">One Foot</a><br/> -->
+                            
+                            <h3 style="margin-top:20px;">Discussions</h3>
+                            <a href="{{ '/events/doradiscussion.html' | relative_url }}">Art about Art (Adoration of Dora)</a><br/>
+                            <a href="{{ '/events/indigenous.html' | relative_url }}">Indigenous Women's Perspectives</a><br/>
+                            <a href="{{ '/events/nezpercejazz.html' | relative_url }}">Nez Perce Jazz Musicians</a><br/>
+                            <a href="{{ '/events/mfa.html' | relative_url }}">MFA Creative Writing Students</a><br/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
