update btn colors

--- a/_layouts/item/oral_history.html
+++ b/_layouts/item/oral_history.html
@@ -29,11 +29,11 @@ layout: item/item-page-base
                 <h3 class="card-title">Downloads</h3>
                 <p><em>Please note the large file sizes.</em></p>
                 <div class="text-center my-2">
-                    <a href="https://objects.lib.uidaho.edu/calnon/calnon33.mp4" class="btn btn-outline-payette-blue m-2">Low Quality Video (650.4 MB)</a>
-                    <a href="https://objects.lib.uidaho.edu/calnon/calnon22.mp4" class="btn btn-outline-payette-blue m-2">High Quality Video (8.69 GB)</a>
+                    <a href="https://objects.lib.uidaho.edu/calnon/calnon33.mp4" class="btn btn-outline-dark m-2">Low Quality Video (650.4 MB)</a>
+                    <a href="https://objects.lib.uidaho.edu/calnon/calnon22.mp4" class="btn btn-outline-dark m-2">High Quality Video (8.69 GB)</a>
                     <br>
-                    <a href="https://objects.lib.uidaho.edu/calnon/calnon11.mp3" target="_blank" class="btn btn-outline-payette-blue m-2">Audio MP3 (80.5 MB)</a>
-                    <a href="https://objects.lib.uidaho.edu/calnon/calnon52.pdf" target="_blank" class="btn btn-outline-payette-blue m-2">PDF Text Transcript</a>
+                    <a href="https://objects.lib.uidaho.edu/calnon/calnon11.mp3" target="_blank" class="btn btn-outline-dark m-2">Audio MP3 (80.5 MB)</a>
+                    <a href="https://objects.lib.uidaho.edu/calnon/calnon52.pdf" target="_blank" class="btn btn-outline-dark m-2">PDF Text Transcript</a>
                 </div>
             </div>
         </div>
