add orgs and orig description

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,6 +8,7 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
+    {% include feature/alert.html text="**Note**: Photograph titles have been adapted from Marylyn Cork. Descriptions from Cork are preserved under the metadata field **original description**." color="palouse" align="left" %}
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
