--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,7 +8,7 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% include feature/alert.html text="**Note**: The physical collection was initiated in the 1980s by Roger Gregory and later expanded by local historian Marylyn Cork. Photograph titles have been adapted from these collectors and their descriptions are preserved under the field **original description**." color="palouse" align="left" %}
+    {% include feature/alert.html text="**Please Note**: The physical collection was initiated in the 1980s by Roger Gregory and later expanded by local historian Marylyn Cork. Photograph titles have been adapted from these collectors and their descriptions are preserved under the field **original description**." color="light" align="left" %}
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
