QC edits and add marylyn cork photo to about

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,7 +8,7 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% include feature/alert.html text="**Please Note**: The physical collection was initiated in the 1980s by Roger Gregory and later expanded by local historian Marylyn Cork. Photograph titles have been adapted from these collectors and their descriptions and organization are preserved under the fields **original description** and **original subject**." color="warning" align="left" %}
+    {% include feature/alert.html text="**Please Note**: The physical collection first took shape in the 1980s under the direction of Roger Gregory and was later expanded by local historian Marylyn Cork. Photograph titles have been adapted from these collectors and their descriptions and organization are preserved under the fields **original description** and **original subject**." color="warning" align="left" %}
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
