update offensive content language

--- a/_includes/index/content-alert.html
+++ b/_includes/index/content-alert.html
@@ -12,8 +12,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>These materials are a product of a time and place in history and should be viewed within their historical context. To maintain historical accuracy, the materials appear as they were originally created to serve as historical evidence of the social mindsets, occurrences, behaviors, and norms of their time.</p>
-                <p>They do not reflect the current views of the University of Idaho. For more information on how we treat archival materials with offensive or disturbing content, please see the University of Idaho Library Special Collections and Archives <a href="https://www.lib.uidaho.edu/special-collections/policies.html#offensive-material-in-archival-collections">Offensive Content Policy</a>.</p>
+                <p>Materials in this collection, including images, language, or other content, may be offensive or disturbing to some viewers. Care has been taken to clearly document the sources of these records, so that viewers may consider the historical context in which they were produced. To maintain historical accuracy, the materials appear as they were originally created.</p>
+                <p>They do not reflect the current views of the University of Idaho. For more information about how we treat materials with offensive or disturbing content, please see the University of Idaho Library, Special Collections and Archives <a href="https://www.lib.uidaho.edu/special-collections/policies.html#offensive-material-in-archival-collections">Offensive Content Policy</a>.</p>
                 <p>Content in this collection may include:</p>
                 <ul>
                     <li>Historical content using racial slurs or other offensive language.</li>
